
Changelog
=========

1.0.21 (unreleased)
-------------------

- If an overlay fails to load the remote address after a click, an error
  is shown.
  [href]

- Email addresses are now verified and stored without leading or trailing
  space. Fixes #127.
  [href]

- Shows an error when displaying or submitting the reservation confirm form, if
  no reservation can be confirmed. Fixes #128.
  [href]

1.0.20 (2014-02-25)
-------------------

- Fixes inability to reserve a group reservation. Closes #124.
  [href]

- Fixes a major Heisenbug occurring in testing using the latest SQLAlchemy
  release.
  [href]

1.0.19 (2014-02-05)
-------------------

- Adds next/previous 30 days to latest reservations report.
  [href]

- Adds month/year filter to the export. Fixes #101.
  [href]

- Replaces the export list view with a form where the export type, format and
  other options can be chosen.
  [href]

- Improves print style for single reservation view. Fixes #109.
  [href]

- Adds seantis.reservation specific browserlayer.
  [href]

- Adds xlsx as output format to exports.
  [href]

- Adds option to define one global manager email address. Fixes #69.
  [href]

- Start treating sqlalchemy warnings during tests as errors.
  [href]

- Adds a link to the reservation to the manager email. Fixes #117.
  [href]

- Adds the reservation quota to the reservation confirmation mail. Fixes #111.
  [href]

- No longer send reservee emails to the reservation manager. Fixes #118.
  [href]

- Richtextfields may now be exported to excel/csv/json. HTML is converted into
  text when this is done.
  [href]

- Dates in the excel/csv/json export are now uniformly exported in ISO8601.
  Fixes #116.
  [href]

- Reservation data is now stored more transparently. This has no effect
  for users, but it ensures better data integrity in the future. Fixes #119.
  [href]

- Integrates seantis.plonetools.
  [href]

- Make sure that the exposure checking method doesn't trip up if the resource